<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="textStart"
    tools:context=".EditReviewActivity">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/editReview"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="409dp"
        android:layout_height="500dp"
        android:layout_marginTop="20dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reviewInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enterReview"
            android:maxLength="8000"
            android:textAlignment="textStart" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitReviewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitReview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <ImageView
        android:id="@+id/starImage1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:srcCompat="@drawable/star4review" />

    <ImageView
        android:id="@+id/starImage2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toEndOf="@+id/starImage1"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:srcCompat="@drawable/star4review" />

    <ImageView
        android:id="@+id/starImage3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toEndOf="@+id/starImage2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:srcCompat="@drawable/star4review" />

    <ImageView
        android:id="@+id/starImage4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toEndOf="@+id/starImage3"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:srcCompat="@drawable/star4review" />

    <ImageView
        android:id="@+id/starImage5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toEndOf="@+id/starImage4"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:srcCompat="@drawable/star4review" />
</androidx.constraintlayout.widget.ConstraintLayout>