<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="textStart"
    tools:context=".EditReviewActivity">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/createReview"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reviewInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top|left"
            android:hint="@string/enterReview"
            android:maxLength="8000"
            android:inputType="textAutoCorrect|textMultiLine"
            android:imeOptions="actionSend"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submitReviewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/submitReview"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:layout_constraintVertical_bias="0.895" />

    <ImageView
        android:id="@+id/starImage1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:srcCompat="@drawable/star4review" />

    <ImageView
        android:id="@+id/starImage2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toEndOf="@+id/starImage1"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:srcCompat="@drawable/star4review" />

    <ImageView
        android:id="@+id/starImage3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toEndOf="@+id/starImage2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:srcCompat="@drawable/star4review" />

    <ImageView
        android:id="@+id/starImage4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toEndOf="@+id/starImage3"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:srcCompat="@drawable/star4review" />

    <ImageView
        android:id="@+id/starImage5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toEndOf="@+id/starImage4"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:srcCompat="@drawable/star4review" />

    <Button
        android:id="@+id/uploadImagesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/uploadImages"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/submitReviewButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/submitReviewButton"
        app:layout_constraintVertical_bias="0.0" />

    <HorizontalScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/uploadImagesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/starImage5">

        <LinearLayout
            android:id="@+id/imagesLinear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" />
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>